--- a/GreenValleyAuctionsSystem.csproj
+++ b/GreenValleyAuctionsSystem.csproj
@@ -74,6 +74,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="EmployeeDashboard.aspx" />
+    <Content Include="InitialContactExistingCustomer.aspx" />
+    <Content Include="InitialContactNewCustomer.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -207,6 +209,20 @@
     </Compile>
     <Compile Include="GeneralMaster.Master.designer.cs">
       <DependentUpon>GeneralMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="InitialContactExistingCustomer.aspx.cs">
+      <DependentUpon>InitialContactExistingCustomer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="InitialContactExistingCustomer.aspx.designer.cs">
+      <DependentUpon>InitialContactExistingCustomer.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="InitialContactNewCustomer.aspx.cs">
+      <DependentUpon>InitialContactNewCustomer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="InitialContactNewCustomer.aspx.designer.cs">
+      <DependentUpon>InitialContactNewCustomer.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusBar.aspx.cs">
