--- a/GreenValleyAuctionsSystem.csproj
+++ b/GreenValleyAuctionsSystem.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AspNet.ScriptManager.jQuery, Version=3.5.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\AspNet.ScriptManager.jQuery.3.5.1\lib\net45\AspNet.ScriptManager.jQuery.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.3.6.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -67,6 +70,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AuctionPickUpForm.aspx" />
+    <Content Include="AuctionSchedulingForm.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -74,8 +79,12 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="EmployeeDashboard.aspx" />
+    <Content Include="EmployeeLogin.aspx" />
+    <Content Include="Examples.aspx" />
     <Content Include="InitialContactExistingCustomer.aspx" />
     <Content Include="InitialContactNewCustomer.aspx" />
+    <Content Include="MoveForm.aspx" />
+    <Content Include="MoveSchedulingScreen.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -175,13 +184,27 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
+    <Content Include="ServiceDetails.aspx" />
     <Content Include="StatusBar.aspx" />
-    <Content Include="testwebpage.aspx" />
     <Content Include="ViewAllCustomers.aspx" />
     <Content Include="ViewInventory.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuctionPickUpForm.aspx.cs">
+      <DependentUpon>AuctionPickUpForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AuctionPickUpForm.aspx.designer.cs">
+      <DependentUpon>AuctionPickUpForm.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AuctionSchedulingForm.aspx.cs">
+      <DependentUpon>AuctionSchedulingForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AuctionSchedulingForm.aspx.designer.cs">
+      <DependentUpon>AuctionSchedulingForm.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CustomerFacingMaster.Master.cs">
       <DependentUpon>CustomerFacingMaster.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -202,6 +225,20 @@
     </Compile>
     <Compile Include="EmployeeFacingMaster.Master.designer.cs">
       <DependentUpon>EmployeeFacingMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeLogin.aspx.cs">
+      <DependentUpon>EmployeeLogin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EmployeeLogin.aspx.designer.cs">
+      <DependentUpon>EmployeeLogin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Examples.aspx.cs">
+      <DependentUpon>Examples.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Examples.aspx.designer.cs">
+      <DependentUpon>Examples.aspx</DependentUpon>
     </Compile>
     <Compile Include="GeneralMaster.Master.cs">
       <DependentUpon>GeneralMaster.Master</DependentUpon>
@@ -224,20 +261,35 @@
     <Compile Include="InitialContactNewCustomer.aspx.designer.cs">
       <DependentUpon>InitialContactNewCustomer.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MoveForm.aspx.cs">
+      <DependentUpon>MoveForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MoveForm.aspx.designer.cs">
+      <DependentUpon>MoveForm.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MoveSchedulingScreen.aspx.cs">
+      <DependentUpon>MoveSchedulingScreen.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MoveSchedulingScreen.aspx.designer.cs">
+      <DependentUpon>MoveSchedulingScreen.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceDetails.aspx.cs">
+      <DependentUpon>ServiceDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ServiceDetails.aspx.designer.cs">
+      <DependentUpon>ServiceDetails.aspx</DependentUpon>
+    </Compile>
     <Compile Include="StatusBar.aspx.cs">
       <DependentUpon>StatusBar.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="StatusBar.aspx.designer.cs">
       <DependentUpon>StatusBar.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="testwebpage.aspx.cs">
-      <DependentUpon>testwebpage.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="testwebpage.aspx.designer.cs">
-      <DependentUpon>testwebpage.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewAllCustomers.aspx.cs">
       <DependentUpon>ViewAllCustomers.aspx</DependentUpon>
